Fixed text wrap-around bug
- Text in text entry area now wraps around when edge of area is reached (horizontally)
- Text entry div can now scroll when text reaches the end of text entry area (vertically)

--- a/tiny_keyboard/ui/css/keys.css
+++ b/tiny_keyboard/ui/css/keys.css
@@ -16,7 +16,8 @@
     padding: 20px 20px 20px;
     font-size: 20pt;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    word-wrap: break-word;
+    overflow: scroll;
 }
 
 .keyboard_container {
